[build-system]
requires = ["wheel", "setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
include = ".*pyi?$"
target-version = ["py39"]

[tool.isort]
profile = "black"
force_single_line = true

[tool.pytest]
testpaths = ["tests"]
required_plugins = ["pytest-asyncio"]

[tool.pyright]
include = ["tanchi"]

[tool.mypy]
strict = true
warn_unreachable = true

# for pyright
warn_unused_ignores = false
warn_redundant_casts = false
